# sp-rofi

./: LICENSE  README.md  config.py  main.py  pyproject.toml  text_box.rasi
sp_rofi/: __main__.py  album_manager.py  config.py  spotify_control.py  spotify_rofi.py  utils.py
